edit: target .form-check-label class to ensure text is white for good contrast on sign in page and password reset html page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -138,6 +138,10 @@ body {
 } 
 */
 
+.form-check-label {
+    color: white;
+}
+
 #scroll-container {
     background-size:200%;
     overflow: hidden;
